Revision history for File-Serialize

{{$NEXT}}
  [ API CHANGES ]

  [ BUG FIXES ]
  - Mention YAML::XS and potential utf8 snag.

  [ DOCUMENTATION ]

  [ ENHANCEMENTS ]

  [ NEW FEATURES ]

  [ STATISTICS ]

1.3.0 2019-07-12
  [ ENHANCEMENTS ]
    - Add JSON5 serializer.

  [ STATISTICS ]
    - code churn: 14 files changed, 184 insertions(+), 47 deletions(-)

1.2.0 2017-10-10
  [ ENHANCEMENTS ]
    - Data::Dumper serializer added. (GH#5)
    - Remove unused dependency to MooX::ClassAttribute.
    - Go down to Role::Tiny. (GH#3, Jason Hall)

  [ STATISTICS ]
    - code churn: 11 files changed, 149 insertions(+), 7 deletions(-)

1.1.1 2016-06-28
  [ BUG FIXES ]
    - Some tests were failing for perls <= 5.16

  [ STATISTICS ]
    - code churn: 2 files changed, 19 insertions(+), 7 deletions(-)

1.1.0 2016-06-27
  [ DOCUMENTATION ]
    - Documentation pushed to the serializers.

  [ ENHANCEMENTS ]
    - serialize_file/deserialize_file can now take a scalar ref as the
      "file" to serialize/deserialize.
    - Added `JSONY` serializer.
    - Serializers now  have a precedence.
    - Added `YAML::XS` serializer.

  [ STATISTICS ]
    - code churn: 14 files changed, 314 insertions(+), 76 deletions(-)

1.0.1 2016-02-26
  [ BUG FIXES ]
    - FS::Serializer was dying if the required modules are not found.

  [ STATISTICS ]
    - code churn: 4 files changed, 75 insertions(+), 44 deletions(-)

1.0.0 2016-02-25
  [ API CHANGES ]
    - 'pretty' and 'canonical' true by default.

  [ ENHANCEMENTS ]
    - Allow 'allow_nonref' option for JSON.
    - New script 'transerialize'.
    - Serializers moved in their own classes.

  [ STATISTICS ]
    - code churn: 17 files changed, 487 insertions(+), 127 deletions(-)

0.5.0 2015-03-21
  [ ENHANCEMENTS ]
    - add support for XML files.
    - final link of transerialize_file can be a scalar ref.

  [ STATISTICS ]
    - code churn: 7 files changed, 54 insertions(+), 5 deletions(-)

0.4.1 2015-03-19
  [ BUG FIXES ]