@@ -37,7 +37,7 @@ A serializer should implement the following class methods:
 
 =item extensions
 
-Required. Must return a list of all extensions that this serializer can deal with. 
+Required. Must return a list of all extensions that this serializer can deal with.
 
 The first
 extension of the list will be considered the canonical extension.
@@ -52,15 +52,15 @@ that it requires L<YAML::Tiny>.
 
 =item serialize( $data, $options )
 
-Required. Returns the serialized C<$data>. 
+Required. Returns the serialized C<$data>.
 
 =item deserialize
 
-Required. Returns the deserialized C<$data>. 
+Required. Returns the deserialized C<$data>.
 
 =item groom_options( $options )
 
-Takes in the generic serializer options and groom them for 
+Takes in the generic serializer options and groom them for
 this specific one.
 
 =item groom_serialize_options( $options )
@@ -81,7 +81,7 @@ The role provides the following attributes / methods:
 
 =over
 
-=item precedence 
+=item precedence
 
 Returns the serializer's precedence, used to determine which one of the available
 serializer for a format to use. Default to C<100>. A value of C<0> means "don't use".
@@ -120,6 +120,7 @@ sub does_extension {
 }
 
 sub is_operative {
+    return 1 unless $_[0]->required_modules;
     all { Module::Info->new_from_module($_) } $_[0]->required_modules;
 }
 
